<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MenuActivity">


        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorRouge"
            app:tabSelectedTextColor="@color/colorBlack"
            app:tabTextColor="@color/colorPrimary">

            <android.support.design.widget.TabItem
                android:id="@+id/tabHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabHome" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabDayMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabDayMenu" />


            <android.support.design.widget.TabItem
                android:id="@+id/tabNewRecette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabNewRecette" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabList" />

        </android.support.design.widget.TabLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="57dp"
        android:background="@color/colorRouge"
        android:visibility="visible" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="502dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="65dp" />



</RelativeLayout>