<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NouveauFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtTitreRecette"
            android:layout_width="367dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/edtTitreRecettte"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtAddIngredient"
            android:layout_width="296dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edtIngredient"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <Button
            android:id="@+id/btnAddIngredient"
            android:layout_width="35dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_input_add"
            android:backgroundTint="@color/colorBlack"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/btnAddPreparation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/edtAddIngredient"
            app:layout_constraintTop_toTopOf="@+id/divider2"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edtAddPreparation"
            android:layout_width="298dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/eedtAddPreparation"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/btnAddPreparation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider3" />

        <Button
            android:id="@+id/btnAddPreparation"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_input_add"
            android:backgroundTint="@color/colorBlack"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <TextView
            android:id="@+id/txtDureePreparation"
            android:layout_width="213dp"
            android:layout_height="39dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/txtDureePreparation"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edtHH"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddPreparation" />

        <EditText
            android:id="@+id/edtHH"
            android:layout_width="58dp"
            android:layout_height="46dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="HH"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/edtMM"
            app:layout_constraintTop_toBottomOf="@+id/edtAddPreparation" />

        <EditText
            android:id="@+id/edtMM"
            android:layout_width="57dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="MM"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddPreparation" />

        <TextView
            android:id="@+id/txtTempsCuisson"
            android:layout_width="214dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/txtTempsCuisson"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDureePreparation" />

        <EditText
            android:id="@+id/edtMMCuisson"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="MM"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtMM" />


        <EditText
            android:id="@+id/edtHHCuisson"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="HH"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/edtMMCuisson"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toEndOf="@+id/txtTempsCuisson"
            app:layout_constraintTop_toBottomOf="@+id/edtHH" />

        <ImageView
            android:id="@+id/imgAddPhotos"
            android:layout_width="216dp"
            android:layout_height="122dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_dejeuner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTempsCuisson" />

        <Button
            android:id="@+id/btnPhotos"
            android:layout_width="35dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="104dp"
            android:layout_weight="1"
            android:background="@drawable/ic_add_photos"
            android:backgroundTint="@color/colorBlack"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAddPhotos"
            app:layout_constraintTop_toBottomOf="@+id/edtHHCuisson" />

        <Button
            android:id="@+id/btnTerminer"
            android:layout_width="47dp"
            android:layout_height="43dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/ic_done_all"
            android:backgroundTint="@color/colorBlack"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnPhotos"
            app:layout_constraintTop_toBottomOf="@+id/edtMMCuisson"
            app:layout_constraintVertical_bias="0.826" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>